backoffice(ui): improve spacing on decisions  * ref https://github.com/cern-sis/issues-inspire/issues/1275

--- a/ui/src/backoffice/literature/containers/LiteratureDetailPageContainer.less
+++ b/ui/src/backoffice/literature/containers/LiteratureDetailPageContainer.less
@@ -30,6 +30,16 @@
       border-color: #e74c3c;
     }
 
+    .literature-decision-box {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+
+    .literature-decision-box p {
+      margin: 0;
+    }
+
     .text-core { color: #16a085 }
     .text-non-core { color: #f39c12; }
     .text-rejected  { color: #e74c3c; }
